--- a/res/layout/deletepage.xml
+++ b/res/layout/deletepage.xml
@@ -3,19 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
+ <TextView
+                android:id="@+id/deleetpageText"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/deletepageText"
+                android:textSize="16dp"
+                android:textStyle="bold" android:layout_marginTop="20dp"/>
     
-     <TextView
-            android:id="@+id/spinner_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dip"
-            android:textStyle="bold"
-            android:text="PLEASE SELECT AN AIRPORT TO DELETE" />
     
     <Spinner
-        android:id="@+id/deletepage"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" android:layout_gravity="center" android:layout_margin="15dp"/>
+        android:id="@+id/deletepageSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:layout_marginTop="50dp"/>
 
 </LinearLayout>
