--- a/res/layout/deletepage.xml
+++ b/res/layout/deletepage.xml
@@ -16,5 +16,10 @@
         android:id="@+id/deletepageSpinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" android:layout_marginTop="50dp"/>
-
-</LinearLayout>
+
+    <Button
+        android:id="@+id/delete_button"
+        android:layout_width="303dp"
+        android:layout_height="wrap_content"
+        android:text="@string/delete" android:layout_marginTop="20dp"/>
+ </LinearLayout>
