--- a/res/layout/add_airport_activity.xml
+++ b/res/layout/add_airport_activity.xml
@@ -19,7 +19,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:ems="7"
-            android:inputType="numberDecimal" >
+            android:inputType="textCapCharacters" >
 
             <requestFocus />
         </EditText>
