--- a/res/layout/adddelete.xml
+++ b/res/layout/adddelete.xml
@@ -8,12 +8,14 @@
         android:id="@+id/adddeletepageAdd"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:onClick="AddDB"
         android:text="@string/adddeletepageAdd" android:textSize="25dp" android:layout_gravity="center" android:layout_margin="15dp" android:textStyle="bold"/>
 
     <Button
         android:id="@+id/adddeletepageDelete"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:onClick="DeleteDB"
         android:text="@string/adddeletepageDelete" android:textSize="25dp" android:textStyle="bold" android:layout_margin="15dp" android:layout_gravity="center"/>
 
 </LinearLayout>
