--- a/res/layout/calc_true_airspeed.xml
+++ b/res/layout/calc_true_airspeed.xml
@@ -28,7 +28,7 @@
             	android:layout_width="fill_parent"
             	android:layout_height="wrap_content"
             	android:ems="3"
-            	android:inputType="numberDecimal" >
+            	android:inputType="numberDecimal" android:text="@string/zero">
             	<requestFocus />
         	</EditText>
            
@@ -52,7 +52,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:ems="7"
-            android:inputType="numberDecimal" >
+            android:inputType="numberDecimal" android:text="@string/zero">
 
             <requestFocus />
         </EditText>
@@ -79,7 +79,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:ems="7"
-            android:inputType="numberDecimal" >
+            android:inputType="numberDecimal" android:clickable="false" android:cursorVisible="false" android:focusable="false" android:focusableInTouchMode="false">
 
             <requestFocus />
         </EditText>
