--- a/res/layout/flyingdistancecoursepage.xml
+++ b/res/layout/flyingdistancecoursepage.xml
@@ -88,8 +88,7 @@
             <EditText
                 android:id="@+id/flyingdistancecourseFlyingDistanceOutput"
                 android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="@string/flyingdistancecourseFlyingDistanceOutput" >
+                android:layout_height="wrap_content" android:focusableInTouchMode="false" android:focusable="false" android:cursorVisible="false" android:clickable="false">
 
                 <requestFocus />
             </EditText>
@@ -110,8 +109,7 @@
             <EditText
                 android:id="@+id/flyingdistancecourseCourse"
                 android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="@string/flyingdistancecourseCourseOutput" >
+                android:layout_height="wrap_content" android:focusable="false" android:focusableInTouchMode="false" android:clickable="false" android:cursorVisible="false">
 
                 <requestFocus />
             </EditText>
