--- a/res/layout/calc_runway_winds_activity.xml
+++ b/res/layout/calc_runway_winds_activity.xml
@@ -63,7 +63,7 @@
 
             <Spinner
                 android:id="@+id/wind_speed_unit_spinner"
-                android:layout_width="80dp"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"/>
 
         	<EditText
@@ -83,7 +83,7 @@
         android:id="@+id/calculate_runway_winds_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textSize="20dp" android:text="@string/calculate_string"/>
+        android:textSize="20dp" android:text="@string/calculate_string" android:onClick="calculate"/>
     
     <TableRow android:paddingTop="50dp">
 
