--- a/res/layout/densityaltitudepage.xml
+++ b/res/layout/densityaltitudepage.xml
@@ -20,6 +20,7 @@
             <EditText
                 android:id="@+id/densityaltitudePressureAltitudeInput"
                 android:layout_width="200dp"
+                android:inputType="numberDecimal"
                 android:layout_height="match_parent"
                 android:text="@string/zero" >
 
@@ -44,6 +45,7 @@
                 android:id="@+id/densityaltitudeOutsideAirTempInput"
                 android:layout_width="200dp"
                 android:layout_height="match_parent"
+                android:inputType="numberDecimal"
                 android:text="@string/zero" >
 
                 <requestFocus />
@@ -53,9 +55,9 @@
         <Button
             android:id="@+id/densityaltitudepageCalculate"
             android:layout_width="200dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="0.87"
-            android:text="@string/densityaltitudepageCalculate" android:textStyle="bold" android:textSize="20dp" android:layout_margin="20dp" android:layout_gravity="center"/>
+            android:text="@string/densityaltitudepageCalculate" android:textStyle="bold" android:textSize="20dp" android:layout_margin="20dp" android:layout_gravity="center" android:onClick="calculate"/>
         
                 <TableRow
             android:id="@+id/tableRow3"
