--- a/res/layout/settingspage.xml
+++ b/res/layout/settingspage.xml
@@ -23,6 +23,6 @@
         android:id="@+id/settingspageAbout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/settingspageAbout" android:textStyle="bold" android:textSize="25dp" android:layout_gravity="center" android:layout_margin="15dp"/>
+        android:text="@string/settingspageAbout" android:textStyle="bold" android:textSize="25dp" android:layout_gravity="center" android:layout_margin="15dp" android:onClick="about"/>
 
 </LinearLayout>
